Nuke the homepage navbar

--- a/moderna/templates/index.html
+++ b/moderna/templates/index.html
@@ -11,7 +11,9 @@
 {% block breadcrumb_menu %}
 <li class="active">{% trans "Home" %}</li>
 {% endblock %}
-
+{% block header_navbar %}
+<!-- No navbar here -->
+{% endblock %}
 
 {% block all_content %}
 <section id="{% block section_id %}featured{% endblock %}">
