--- a/moderna/templates/base.html
+++ b/moderna/templates/base.html
@@ -60,6 +60,7 @@
 
 <body id="{% block body_id %}body{% endblock %}">
 <div id="wrapper">
+{% block header_navbar %}
 	<header>
 <div class="navbar navbar-default navbar-static-top" role="navigation">
 <div class="container">
@@ -78,6 +79,7 @@
 </div>
 </div>
 	</header>
+{% endblock %}
 {% block all_content %}
 <div class="container">
 
