--- a/moderna/templates/base.html
+++ b/moderna/templates/base.html
@@ -18,17 +18,11 @@
 {% compress css %}
 <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
 <link rel="stylesheet" href="{% static "css/fancybox/jquery.fancybox.css" %}">
-
 <link rel="stylesheet" href="{% static "css/flexslider.css" %}">
-
 <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
 <link rel="stylesheet" href="{% static "css/style.css" %}">
-
 <link rel="stylesheet" href="{% static "skins/default.css" %}">
-
-
-
-
+<link rel="stylesheet" href="{% static "css/custom-layer.css" %}">
 
 {% if LANGUAGE_BIDI %}
 <link rel="stylesheet" href="{% static "css/rtl.css" %}">
