--- a/moderna/templates/base.html
+++ b/moderna/templates/base.html
@@ -172,7 +172,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
+<!--				<div class="col-lg-6">
 					<ul class="social-network">
 						<li><a title="" data-placement="top" href="#" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a title="" data-placement="top" href="#" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -180,7 +180,7 @@
 						<li><a title="" data-placement="top" href="#" data-original-title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
 						<li><a title="" data-placement="top" href="#" data-original-title="Google plus"><i class="fa fa-google-plus"></i></a></li>
 					</ul>
-				</div>
+				</div>-->
 		
 
 </div>
