--- a/moderna/templates/index.html
+++ b/moderna/templates/index.html
@@ -34,7 +34,7 @@
         <div id="main-slider" class="flexslider">
             <ul class="slides">
               <li>
-                <img src="{% static "img/slides/1.jpg" %}" alt="" />
+                <img src="{% static "img/wedsite-cover.jpg" %}" alt="" />
                 <div class="flex-caption">
                     <h3>Libby & Haydn</h3> 
 					<p>are getting married!</p>
@@ -61,24 +61,24 @@
 					<div class="col-lg-4">
 						<div class="box">
 							<div class="box-gray aligncenter">
-								<h4>Fully responsive</h4>
+								<h4>RSVP</h4>
 								<div class="icon">
 								<i class="fa fa-desktop fa-3x"></i>
 								</div>
-								<p class="">
+								<p>
 								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
 								</p>
 									
 							</div>
 							<div class="box-bottom">
-								<a href="#">Learn more</a>
+								<a href="#">RSVP Now<span class="link-overlay"></span></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="box">
 							<div class="box-gray aligncenter">
-								<h4>Modern Style</h4>
+								<h4>About Us</h4>
 								<div class="icon">
 								<i class="fa fa-pagelines fa-3x"></i>
 								</div>
@@ -112,14 +112,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="solidline">
-				</div>
-			</div>
-		</div>
-		<!-- end divider -->
 	</div>
 	</section>
 
