--- a/moderna/templates/index.html
+++ b/moderna/templates/index.html
@@ -36,7 +36,7 @@
               <li>
                 <img src="{% static "img/wedsite-cover.jpg" %}" alt="" />
                 <div class="flex-caption">
-                    <h3>Libby & Haydn</h3> 
+                    <h3>Libby & Haydn</h3>
 					<p>are getting married!</p>
                 </div>
               </li>
@@ -45,7 +45,7 @@
 	<!-- end slider -->
 			</div>
 		</div>
-	</div>	
+	</div>
 
 {% endblock %}
 </div>
@@ -68,10 +68,10 @@
 								<p>
 								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
 								</p>
-									
+
 							</div>
 							<div class="box-bottom">
-								<a href="#">RSVP Now<span class="link-overlay"></span></a>
+								<a href="/rsvp/">RSVP Now<span class="link-overlay"></span></a>
 							</div>
 						</div>
 					</div>
@@ -85,7 +85,7 @@
 								<p>
 								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
 								</p>
-									
+
 							</div>
 							<div class="box-bottom">
 								<a href="#">Learn more</a>
@@ -102,7 +102,7 @@
 								<p>
 								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
 								</p>
-									
+
 							</div>
 							<div class="box-bottom">
 								<a href="#">Learn more</a>
