--- a/rsvp/templates/search.html
+++ b/rsvp/templates/search.html
@@ -29,7 +29,7 @@ $input.typeahead({
 $input.change(function(){
     active = $input.typeahead('getActive');
     if (active){
-        $('a#rsvp-link').attr('href', active.slug)
+        $('input#destination-slug').attr('value', active.slug)
     }
 });
 </script>
@@ -38,10 +38,13 @@ $input.change(function(){
 {% block main_class %}middle col-md-offset-1{% endblock %}
 {% block title %}{% block meta_title %}Find your invite{% endblock %}{% endblock %}
 {% block main %}
-<label for="query" class="col-md-12 text-center label-large sr-only">Find your invite</label>
-<input class="form-control input-lg typeahead" type="text" id="query" placeholder="Who's invited?"/>
-<input class="col-md-2 col-md-offset-5 btn btn-large form-inline" type="submit" id="query-submit" value="RSVP"/>
-<a class="col-md-2 col-md-offset-5 btn btn-large" type="submit" id="rsvp-link">RSVP</a>
+<form action="/rsvp/" method="post">
+    {% csrf_token %}
+    <label for="query" class="col-md-12 text-center label-large sr-only">Find your invite</label>
+    <input class="form-control input-lg typeahead" type="text" id="query" placeholder="Who's invited?">
+    <input type="hidden" name="slug" id="destination-slug">
+    <input class="col-md-2 col-md-offset-5 btn btn-large form-inline" type="submit" id="query-submit" value="RSVP">
+</form>
 
 
 {% endblock %}
