Change to neutral thanks page
Having a dependent one seemed to much trouble at this stage

--- a/rsvp/templates/thanks.html
+++ b/rsvp/templates/thanks.html
@@ -9,5 +9,10 @@
 {% block main_class %}middle col-md-offset-1{% endblock %}
 {% block title %}{% block meta_title %}Thanks!{% endblock %}{% endblock %}
 {% block main %}
-<h2 style="text-align: center;">We look forward to seeing you there</h2>
+<div style="text-align: center;">
+<h3>
+    Please let us know if your answer changes
+</h3>
+You can let either of us know, or come back here and RSVP again.
+</div>
 {% endblock %}
