--- a/moderna/templates/index.html
+++ b/moderna/templates/index.html
@@ -63,10 +63,10 @@
 							<div class="box-gray aligncenter">
 								<h4>RSVP</h4>
 								<div class="icon">
-								<i class="fa fa-desktop fa-3x"></i>
+								<i class="fa fa-envelope fa-3x"></i>
 								</div>
 								<p>
-								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+								  Let us know if you're coming to our engagement party!<br/>&nbsp;
 								</p>
 
 							</div>
@@ -80,32 +80,32 @@
 							<div class="box-gray aligncenter">
 								<h4>About Us</h4>
 								<div class="icon">
-								<i class="fa fa-pagelines fa-3x"></i>
+								<i class="fa fa-heart fa-3x"></i>
 								</div>
 								<p>
-								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+								  If you're wondering who we are, click here to find out more.<br>&nbsp;
 								</p>
 
 							</div>
 							<div class="box-bottom">
-								<a href="#">Learn more</a>
+								<a href="/about-us">About Us</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="box">
 							<div class="box-gray aligncenter">
-								<h4>Customizable</h4>
+								<h4>The Event</h4>
 								<div class="icon">
-								<i class="fa fa-edit fa-3x"></i>
+								<i class="fa fa-glass fa-3x"></i>
 								</div>
 								<p>
-								 Voluptatem accusantium doloremque laudantium sprea totam rem aperiam.
+								  Forgotten some details about the engagement? No worries, click here to find out more!
 								</p>
 
 							</div>
 							<div class="box-bottom">
-								<a href="#">Learn more</a>
+								<a href="/the-event/">Learn more</a>
 							</div>
 						</div>
 					</div>
