--- a/rsvp/templates/search.html
+++ b/rsvp/templates/search.html
@@ -48,7 +48,7 @@ $('body').ready(function(){
     <label for="query" class="col-md-12 text-center label-large sr-only">Find your invite</label>
     <input class="form-control input-lg typeahead" type="text" id="query" placeholder="Who's invited?">
     <input type="hidden" name="slug" id="destination-slug">
-    <input class="col-md-2 col-md-offset-5 btn btn-large form-inline" type="submit" id="query-submit" value="RSVP">
+    <input class="col-md-2 col-md-offset-5 btn btn-large btn-blue form-inline" type="submit" id="query-submit" value="RSVP">
 </form>
 
 
